--- a/Configurations/windows-makefile.tmpl
+++ b/Configurations/windows-makefile.tmpl
@@ -111,10 +111,10 @@ MISC_SCRIPTS={-
                          && $unified_info{attributes}->{scripts}->{$_}->{misc} }
                   @{$unified_info{scripts}})
 -}
-HTMLDOCS1={- join(" ", @{$unified_info{htmldocs}->{man1}}) -}
-HTMLDOCS3={- join(" ", @{$unified_info{htmldocs}->{man3}}) -}
-HTMLDOCS5={- join(" ", @{$unified_info{htmldocs}->{man5}}) -}
-HTMLDOCS7={- join(" ", @{$unified_info{htmldocs}->{man7}}) -}
+HTMLDOCS1={- our @HTMLDOCS1 = @{$unified_info{htmldocs}->{man1}}; join(" ", @HTMLDOCS1) -}
+HTMLDOCS3={- our @HTMLDOCS3 = @{$unified_info{htmldocs}->{man3}}; join(" ", @HTMLDOCS3) -}
+HTMLDOCS5={- our @HTMLDOCS5 = @{$unified_info{htmldocs}->{man5}}; join(" ", @HTMLDOCS5) -}
+HTMLDOCS7={- our @HTMLDOCS7 = @{$unified_info{htmldocs}->{man7}}; join(" ", @HTMLDOCS7) -}
 
 APPS_OPENSSL={- use File::Spec::Functions;
                 "\"".catfile("apps","openssl")."\"" -}
@@ -401,10 +401,10 @@ libclean:
 	-del /Q /F $(LIBS) libcrypto.* libssl.* ossl_static.pdb
 
 clean: libclean
-	-rmdir /Q /S $(HTMLDOCS1)
-	-rmdir /Q /S $(HTMLDOCS3)
-	-rmdir /Q /S $(HTMLDOCS5)
-	-rmdir /Q /S $(HTMLDOCS7)
+	{- join("\n\t", map { "-del /Q /F $_" } @HTMLDOCS1) -}
+	{- join("\n\t", map { "-del /Q /F $_" } @HTMLDOCS3) -}
+	{- join("\n\t", map { "-del /Q /F $_" } @HTMLDOCS5) -}
+	{- join("\n\t", map { "-del /Q /F $_" } @HTMLDOCS7) -}
 	{- join("\n\t", map { "-del /Q /F $_" } @PROGRAMS) -}
 	-del /Q /F $(MODULES)
 	-del /Q /F $(SCRIPTS)
