--- a/Configurations/unix-Makefile.tmpl
+++ b/Configurations/unix-Makefile.tmpl
@@ -1188,7 +1188,7 @@ reconfigure reconf:
 	  return <<"EOF";
 $args{src}: $pod
 	pod2html "--podroot=\$(SRCDIR)/doc" --htmldir=.. \\
-		 --podpath=man1:man3:man5:man7 "--infile=$pod" "--title=$title" \\
+		 --podpath=man1:man3:man5:man7 --infile=$pod "--title=$title" \\
 	| \$(PERL) -pe 's|href="http://man\\.he\\.net/(man\\d/[^"]+)(?:\\.html)?"|href="../\$1.html|g;' \\
 	> \$\@
 EOF
@@ -1199,7 +1199,7 @@ EOF
 	  return <<"EOF";
 $args{src}: $pod
 	pod2man --name=$name --section=$section --center=OpenSSL \\
-		--release=\$(VERSION) "$pod" \\
+		--release=\$(VERSION) $pod \\
 	> \$\@
 EOF
       } elsif (platform->isdef($args{src})) {
