--- a/Configurations/windows-makefile.tmpl
+++ b/Configurations/windows-makefile.tmpl
@@ -588,7 +588,7 @@ reconfigure reconf:
 	  my $title = basename($args{src}, ".html");
 	  my $pod = $args{generator}->[0];
 	  return <<"EOF";
-$args{src}: $pod
+$args{src}: "$pod"
 	pod2html "--podroot=\$(SRCDIR)/doc" --htmldir=.. \\
 		 --podpath=man1:man3:man5:man7 "--infile=$pod" "--title=$title" \\
 	| \$(PERL) -pe ^"s^|href=\\^"http://man\\.he\\.net/^(man\\d/[^^\\^"]+^)^(?:\.html^)?^"^|href=\\^"../\$\$1.html^|g;^" \\
