Fix make distclean remove some empty directoires
After make distclean the following directories are
still around:

 crypto/include
 crypto/providers
 doc/man
 doc/html

This patch cleans those up or avoids to create them in
the first place.

[extended tests]

--- a/Configurations/unix-Makefile.tmpl
+++ b/Configurations/unix-Makefile.tmpl
@@ -524,6 +524,7 @@ clean: libclean
 
 distclean: clean
 	$(RM) configdata.pm
+	$(RM) -r doc/man doc/html
 	$(RM) Makefile
 
 # We check if any depfile is newer than Makefile and decide to
