Look for built pod files in the build tree.
Some files (mainly in man1, but not just there) are FOO.pod.in; they get
built into foo.pod, in the BUILD tree, not the SOURCE tree. This matters
when $BUILD != $SOURCE, so look for the built files in the right spot.

--- a/Configurations/unix-Makefile.tmpl
+++ b/Configurations/unix-Makefile.tmpl
@@ -955,7 +955,7 @@ doc-nits: build_generated
 	(cd $(SRCDIR); $(PERL) util/find-doc-nits -n -l -e )
 
 cmd-nits: build_generated apps/openssl
-	(cd $(SRCDIR); $(PERL) util/find-doc-nits -c )
+	(SRCDIR=$(SRCDIR) BLDDIR=$(BLDDIR) $(PERL) util/find-doc-nits -c )
 
 # Test coverage is a good idea for the future
 #coverage: $(PROGRAMS) $(TESTPROGRAMS)
