--- a/dev/release-aux/openssl-announce-pre-release.tmpl
+++ b/dev/release-aux/openssl-announce-pre-release.tmpl
@@ -1,21 +1,21 @@
 
-   OpenSSL version $release ($LABEL)
-   ===========================================
+   OpenSSL version $release_text released
+   ======================================
 
    OpenSSL - The Open Source toolkit for SSL/TLS
    https://www.openssl.org/
 
-   OpenSSL $MAJOR.$MINOR.$PATCH is currently in $LABEL.
+   OpenSSL $series is currently in $label.
 
-   OpenSSL $release has now been made available.  For details of
+   OpenSSL $release_text has now been made available.  For details of
    changes and known issues see the release notes at:
 
-        https://www.openssl.org/news/openssl-$MAJOR.$MINOR-notes.html
+        https://www.openssl.org/news/openssl-$series-notes.html
 
    Note: This OpenSSL pre-release has been provided for testing ONLY.
    It should NOT be used for security critical purposes.
 
-   The $LABEL release is available for download via HTTPS and FTP from the
+   The $label release is available for download via HTTPS and FTP from the
    following master locations (you can find the various FTP mirrors under
    https://www.openssl.org/source/mirror.html):
 
