fixup! Mention the 3.0 wiki page in the release announcement emails

--- a/dev/release-aux/openssl-announce-pre-release.tmpl
+++ b/dev/release-aux/openssl-announce-pre-release.tmpl
@@ -8,7 +8,7 @@
    OpenSSL $series is currently in $label.
 
    OpenSSL $release_text has now been made available.  For details of
-   changes see the release notes at:
+   the changes, see the release notes at:
 
         https://www.openssl.org/news/openssl-$series-notes.html
 
