--- a/dev/release-aux/openssl-announce-release.tmpl
+++ b/dev/release-aux/openssl-announce-release.tmpl
@@ -7,7 +7,7 @@
 
    The OpenSSL project team is pleased to announce the release of
    version $release of our open source toolkit for SSL/TLS.
-   For details of changes see the release notes at:
+   For details of the changes, see the release notes at:
 
         https://www.openssl.org/news/openssl-$series-notes.html
 
