Configure DEPs for FIPS provider on AIX.
The binder of the AIX linker needs to be told which functions to call on
loading and initializing a shared object. Therefore another configuration
variable shared_fipsflag is introduced, which replaces shared_defflag, when
the providers/fips module gets configured.

--- a/Configurations/unix-Makefile.tmpl
+++ b/Configurations/unix-Makefile.tmpl
@@ -1484,8 +1484,11 @@ EOF
                  grep { platform->isdef($_) }
                  @{$args{objs}};
       my @deps = compute_lib_depends(@{$args{deps}});
-      my $shared_def = join("", map { ' '.$target{shared_defflag}.$_ } @defs);
-
+      if (m/providers\/fips/ && defined $target{shared_fipsflag}) {
+        $shared_def = join("", map { ' '.$target{shared_fipsflag}.$_ } @defs);
+      } else {
+        $shared_def = join("", map { ' '.$target{shared_defflag}.$_ } @defs);
+      }
       my $objs = join(" \\\n\t\t", fill_lines(' ', $COLUMNS - 16, @objs));
       my $deps = join(" \\\n" . ' ' x (length($dso) + 2),
                       fill_lines(' ', $COLUMNS - length($dso) - 2,
