--- a/Configurations/unix-Makefile.tmpl
+++ b/Configurations/unix-Makefile.tmpl
@@ -1484,11 +1484,8 @@ EOF
                  grep { platform->isdef($_) }
                  @{$args{objs}};
       my @deps = compute_lib_depends(@{$args{deps}});
-      if (m/providers\/fips/ && defined $target{shared_fipsflag}) {
-        $shared_def = join("", map { ' '.$target{shared_fipsflag}.$_ } @defs);
-      } else {
-        $shared_def = join("", map { ' '.$target{shared_defflag}.$_ } @defs);
-      }
+      my $shared_def = join("", map { ' '.$target{shared_defflag}.$_ } @defs);
+      $shared_def .= ' '.$target{shared_fipsflag} if (m/providers\/fips/ && defined $target{shared_fipsflag});
       my $objs = join(" \\\n\t\t", fill_lines(' ', $COLUMNS - 16, @objs));
       my $deps = join(" \\\n" . ' ' x (length($dso) + 2),
                       fill_lines(' ', $COLUMNS - length($dso) - 2,
